# django-migrations-mgmt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  _config.yml  setup.cfg
.github/workflows/: lint.yml  pypi-publish.yml
docs/: design_implementation.md  migrations_good_practices.md
migrations_mgmt_cmds/: storage.py
migrations_mgmt_cmds/management/commands/: migrations_release.py  migrations_rollback.py  release_management.py
