[metadata]
name = django-migrations-mgmt
version = 0.2.2
description = A Django management commands to help on migrations deployment rollbacks.
url = https://github.com/italux/django-migrations-mgmt/
author = Italo Santos
author_email = italux.santos@gmail.com
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires >=3.7
